tests/ui/return_type_entity.stderr
error: command may not define a return type, except for `&mut Self`
 --> tests/ui/return_type_entity.rs:4:30
  |
4 | fn foo(world: &mut World) -> Command { }
  |                              ^^^^^^^
