tests/ui/return_type_entity.rs
use bevy_commandify::*;

#[entity_command]
fn foo(world: &mut World) -> Command { }

fn main() { }